DescomplicandoKubernetes/#2.5_ExemploPodLimitRange.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-limitrange
spec:
  containers:
    - name: limitado-pod
      image: nginx
