DescomplicandoKubernetes/#5.10_ExemploComponenteIngressNginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: [ip-da-maquina]
    http:
      paths:
      - backend:
        serviceName: nginx-ingress
        servicePort: 18080
      path: /nginx_status
